# wiemip-data-registry

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: _gen_stubs.py  _sync_variables.py  deploy-to-hub.yml  sync-variables.yml
notebooks/: land_carbon_stocks.ipynb  plot_variable.ipynb
plotting_scripts/: build_registry.py  extract.py  extract_factorial.py  plot_baseline_stocks_fluxes.py  plot_cumulative_nbp.py  plot_factorial.py  plot_pool_change.py  plot_runtype.py  repro_vivek_classic_nbp.py
wiemip_registry/: __init__.py  __init__.pyi  _gen_stubs.py  _sync_variables.py  adapters.py  const.py  core.py  variable_overrides.py  variables.py
wiemip_registry/BiomeE/: __init__.py  convert.py
wiemip_registry/CLASSIC/: __init__.py  convert.py
wiemip_registry/CLM/: __init__.py  convert.py
wiemip_registry/CLM_FATES/: __init__.py  convert.py
wiemip_registry/DLEM/: __init__.py  convert.py
wiemip_registry/JSBACH/: __init__.py  convert.py
wiemip_registry/JULES/: __init__.py  convert.py
wiemip_registry/LPJ_EOSIM/: __init__.py  convert.py
wiemip_registry/LPJmL6/: __init__.py  convert.py
wiemip_registry/LPX_Bern/: __init__.py  convert.py
wiemip_registry/TEM/: __init__.py  convert.py
wiemip_registry/VISIT_UT/: __init__.py  convert.py
wiemip_registry/references/: README.md
