[project]
name = "wiemip-data-processing"
version = "0.1.0"
description = "Process WIE-MIP land-model-intercomparison output into global stocks & fluxes, via a typed file registry."
readme = "AGENTS.md"
requires-python = ">=3.10"
authors = [{ name = "Tom", email = "tom@sparkclimate.org" }]

# Stack matches the analysis env on the box (py3.10): xarray + numpy + pandas
# + matplotlib + netCDF4. No Dask — s3fs I/O overhead makes it counterproductive.
dependencies = [
    "numpy>=2.2",
    "pandas>=2.0",
    "xarray>=2025.6.0",
    "matplotlib>=3.10",
    "netCDF4>=1.6",
    "black>=26.5.1",
    "notebook>=7.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The installable package is the registry; the root-level scripts
# (build_registry.py, extract.py, plot_*.py) are run in place.
packages = ["wiemip_registry"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
wiemip-data-processing = { workspace = true }

[dependency-groups]
dev = [
    "wiemip-data-processing",
]
